# OnlineSurfaceReconstruction

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindOpenVR.cmake  License.txt  README.md  gl features.txt
CMake/Modules/: FindDSet.cmake  FindNSEssentials.cmake  FindNanoflann.cmake  FindRPLY.cmake  FindTBB.cmake  SetupBuildEnvironment.cmake
DavidVive/: 0516.osr  0517.osr  TakeDavidScan.au3  backup.au3  firstCalibratedScan.ply  secondCalibratedScan.ply  take1.ply  take2.ply  viveController.ply
PLYDecoder/: DLLLoadPLY.cpp  DLLLoadPLY.h  PLYDecoder.vcxproj  PLYDecoder.vcxproj.filters  common.h  rply.c
PLYDecoder/x64/Release/PLYDecoder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PLYDecoder.lastbuildstate  PLYDecoder.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ext/nanoflann/: nanoflann.hpp
ext/rply/: rply.c
glsl/: blinnphong.frag  edges.tcs  edges.tes  edges.vert  flat_shading.geom  lines.frag  lines.vert  mesh.frag  mesh.vert  mesh_colors_quad.geom  mesh_colors_quad.tcs  mesh_colors_quad.tes  mesh_colors_tri.geom  mesh_colors_tri.tcs  mesh_colors_tri.tes  mesh_flat.vert  normal.frag  normal.geom  normal.vert  orientation_field.frag  orientation_field.geom  orientation_field.vert  phantom.frag  phantom.vert  position_field.frag  position_field.vert  sphere.frag  sphere.geom  sphere.vert  void.vert
include/: AbstractViewer.h  AttributeConsistency.h  Attributes.h  BatchSession.h  BoundingBox.h  Camera.h  Colors.h  Data.h  DavidTurntableConnection.h  DavidViveScanLoader.h  ExtractedMesh.h  ExtractedMeshGL.h  ExtractionAttributeMapping.h  ExtractionUtils.h  FileScanLoader.h  FillHoleTool.h  GLBuffer.h  GLShader.h  GLVertexArray.h  GUIObject.h  Hierarchy.h  HierarchyCapabilities.h  HierarchyDecl.h  HierarchyDef.h  HierarchyMortonMultiPass.h  HierarchyOctree.h  HierarchyOptimizationHelper.h  HierarchyOptions.h  HierarchyRegularSubdiv.h  HierarchyRenderer.h  HierarchyUnstructured.h  ICP.h  INeighborQueryable.h  IndentationLog.h  Indexing.h  LeastSquaresSystem.h  ManualCoarseRegistrationTool.h  MeshSettings.h  MeshSplit.h  Morton.h  (+23 more)
include/3rd/: ICP.h
include/osr/: AttributeConsistency.h  Attributes.h  BatchSession.h  Colors.h  Data.h  ExtractedMesh.h  ExtractionAttributeMapping.h  ExtractionUtils.h  Hierarchy.h  HierarchyMortonMultiPass.h  HierarchyOptimizationHelper.h  HierarchyOptions.h  HierarchyRegularSubdiv.h  HierarchyUnstructured.h  IndentationLog.h  Indexing.h  LeastSquaresSystem.h  MeshSettings.h  MeshVisitor.h  Optimizer.h  ParallelCG.h  Parallelization.h  PersistentIndexContainer.h  PreparedVertexSet.h  Scan.h  Serialization.h  filehelper.h  meshio.h
include/osr/gui/: AbstractViewer.h  Camera.h  DataGL.h  ExtractedMeshGL.h  GLShader.h  GLVertexArray.h  GUIObject.h  HierarchyRenderer.h  ScanRenderer.h  ShaderPool.h  Viewer.h
include/osr/gui/loaders/: DavidViveScanLoader.h  FileScanLoader.h  ProceduralScanLoader.h  ScanLoader.h
include/osr/gui/tools/: FillHoleTool.h  ManualCoarseRegistrationTool.h  RemoveTool.h  Selection.h  SmoothTool.h  Tool.h
include/zmq/: zmqClient.cpp  zmqClient.h  zmqPub.h
libOSR/: CMakeLists.txt
libOSR/include/3rd/: ICP.h
libOSR/include/osr/: Colors.h  Data.h  ExtractedMesh.h  ExtractionAttributeMapping.h  ExtractionUtils.h  ForEachHelper.h  Hierarchy.h  HierarchyCapabilities.h  HierarchyDecl.h  HierarchyDef.h  HierarchyMortonMultiPass.h  HierarchyOctree.h  HierarchyOptimizationHelper.h  INeighborQueryable.h  Interpolation.h  MeshSettings.h  MeshVisitor.h  Neighbor.h  OSRLibrary.h  Optimizer.h  PreparedVertexSet.h  Scan.h  common.h  field.h  meshio.h  nanoflannForwardDeclare.h
libOSR/src/: Data.cpp  ExtractedMesh.cpp  HierarchyMortonMultiPass.cpp  HierarchyOctree.cpp  HierarchyOptimizationHelper.cpp  MeshVisitor.cpp  Scan.cpp  common.cpp  field.cpp  meshio.cpp
props/: libigl_debug.props  osr-debug.props  osr-release.props  zmq_debug_x64.props  zmq_release_x64.props
src/: AbstractViewer.cpp  BatchSession.cpp  BoundingBox.cpp  Camera.cpp  Colors.cpp  Data.cpp  DavidTurntableConnection.cpp  DavidViveScanLoader.cpp  ExtractedMesh.cpp  ExtractedMeshGL.cpp  ExtractionAttributeMapping.cpp  FileScanLoader.cpp  FillHoleTool.cpp  GLBuffer.cpp  GLShader.cpp  GLVertexArray.cpp  Hierarchy.cpp  HierarchyMortonMultiPass.cpp  HierarchyOctree.cpp  HierarchyOptimizationHelper.cpp  HierarchyRegularSubdiv.cpp  HierarchyRenderer.cpp  HierarchyUnstructured.cpp  IndentationLog.cpp  LeastSquaresSystem.cpp  ManualCoarseRegistrationTool.cpp  MeshSplit.cpp  Morton.cpp  Optimizer.cpp  Parallelization.cpp  ProceduralScanLoader.cpp  RemoveTool.cpp  Scan.cpp  Selection.cpp  ShaderPool.cpp  SmoothTool.cpp  Timer.cpp  UnityMesh.cpp  Viewer.cpp  adjacency.cpp  (+7 more)
src/osr/: BatchSession.cpp  BoundingBox.cpp  Colors.cpp  Data.cpp  ExtractedMesh.cpp  ExtractionAttributeMapping.cpp  HierarchyMortonMultiPass.cpp  HierarchyOptimizationHelper.cpp  HierarchyRegularSubdiv.cpp  HierarchyUnstructured.cpp  IndentationLog.cpp  LeastSquaresSystem.cpp  MeshVisitor.cpp  Morton.cpp  Optimizer.cpp  Parallelization.cpp  Scan.cpp  Timer.cpp  common.cpp  field.cpp  filehelper.cpp  meshio.cpp
src/osr/gui/: AbstractViewer.cpp  Camera.cpp  DataGL.cpp  ExtractedMeshGL.cpp  GLBuffer.cpp  GLShader.cpp  GLVertexArray.cpp  HierarchyRenderer.cpp  ScanRenderer.cpp  ShaderPool.cpp  Viewer.cpp
src/osr/gui/loaders/: DavidTurntableConnection.cpp  DavidViveScanLoader.cpp  FileScanLoader.cpp  ProceduralScanLoader.cpp
src/osr/gui/tools/: FillHoleTool.cpp  ManualCoarseRegistrationTool.cpp  RemoveTool.cpp  Selection.cpp  SmoothTool.cpp
src/zmq/: zmqClient.cpp  zmqPub.cpp
